pkg/cmd/kurel/testdata/webservice-ingress-portname/cluster.yaml
apiVersion: launcher.gokure.dev/v1alpha1
kind: ClusterProfile
metadata:
  name: test-cluster
spec:
  capabilities:
    ingress:
      rendering:
        networkPolicy:
          trafficSources:
            - namespace: ingress-nginx
